bin_PROGRAMS = bin/blitz


ACLOCAL_AMFLAGS = -I m4

AM_CXXFLAGS = -I src/blitz


bin_blitz_SOURCES = src/blitz.cpp\
  src/blitz/blitz_types.hpp\
  src/blitz/console.cpp\
  src/blitz/console.hpp\
  src/blitz/reverse.hpp\
  src/blitz/stringpattern.cpp\
  src/blitz/stringpattern.hpp\
  src/blitz/strutil.cpp\
  src/blitz/strutil.hpp\
  src/blitz/tcpconnection.cpp\
  src/blitz/tcpconnection.hpp\
  src/blitz/tcplistener.cpp\
  src/blitz/tcplistener.hpp\
  src/blitz/webdatafetcher.cpp\
  src/blitz/webdatafetcher.hpp\
  src/blitz/web_request.cpp\
  src/blitz/web_request.hpp\
  src/blitz/web_response.cpp\
  src/blitz/web_response.hpp\
  src/blitz/web_server.cpp\
  src/blitz/web_server.hpp\
  src/blitz/web_static_file.cpp\
  src/blitz/web_static_file.hpp
